firefly-django-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: firefly-django-service
spec:
  selector:
    app: firefly-django
  ports:
  # Default port used by the image
  - port: 8000
