firefly-django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /firefly(/|$)(.*)
        backend:
          service:
            name: firefly-django-service
            port:
              number: 8000
